[gd_scene load_steps=13 format=3 uid="uid://dfmc3ktmp7iqj"]

[ext_resource type="Texture2D" uid="uid://cpfveep1r62em" path="res://gameplay/environment/assets/sprites/ground.png" id="1_jsxtr"]
[ext_resource type="Script" path="res://gameplay/environment/environment.gd" id="1_p1f7s"]
[ext_resource type="Texture2D" uid="uid://b2xb6cq2sggf" path="res://gameplay/environment/assets/sprites/blocks.png" id="2_m38d2"]
[ext_resource type="PackedScene" uid="uid://db5ji6bi7bhcy" path="res://gameplay/player/player.tscn" id="4_k71a4"]
[ext_resource type="Theme" uid="uid://d384l0kaseax3" path="res://kenny_theme/kenny_theme.tres" id="4_up0sl"]
[ext_resource type="PackedScene" uid="uid://saryhih3bgdw" path="res://ui/clock/clock.tscn" id="4_yc3x4"]
[ext_resource type="PackedScene" uid="uid://c1txfwrikw3k3" path="res://gameplay/pallets/pallet.tscn" id="5_e111s"]
[ext_resource type="PackedScene" uid="uid://cyyvj6et0aa32" path="res://gameplay/crates/crate.tscn" id="6_a53f1"]
[ext_resource type="Resource" uid="uid://c6gpipo7u4pu8" path="res://levels/maps.json" id="7_vif5w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2gs1g"]
texture = ExtResource("1_jsxtr")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_44uf5"]
texture = ExtResource("2_m38d2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_rv40p"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_2gs1g")
sources/1 = SubResource("TileSetAtlasSource_44uf5")

[node name="Environment" type="TileMap"]
tile_set = SubResource("TileSet_rv40p")
format = 2
layer_0/name = "Ground"
layer_1/name = "Walls"
script = ExtResource("1_p1f7s")
Player = ExtResource("4_k71a4")
Pallet = ExtResource("5_e111s")
Crate = ExtResource("6_a53f1")
maps_resource = ExtResource("7_vif5w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelStats" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 36.0
grow_horizontal = 2
theme = ExtResource("4_up0sl")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LevelStats"]
layout_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/LevelStats/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="CanvasLayer/LevelStats/HBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="MovesContainer" type="PanelContainer" parent="CanvasLayer/LevelStats/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LevelStats/HBoxContainer/MovesContainer"]
layout_mode = 2

[node name="MovesLabel" type="Label" parent="CanvasLayer/LevelStats/HBoxContainer/MovesContainer/HBoxContainer"]
layout_mode = 2
text = "Moves:"

[node name="Control" type="Control" parent="CanvasLayer/LevelStats/HBoxContainer/MovesContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Moves" type="Label" parent="CanvasLayer/LevelStats/HBoxContainer/MovesContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 2

[node name="TimeContainer" type="PanelContainer" parent="CanvasLayer/LevelStats/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LevelStats/HBoxContainer/TimeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/LevelStats/HBoxContainer/TimeContainer/HBoxContainer"]
layout_mode = 2
text = "Time:"

[node name="Control" type="Control" parent="CanvasLayer/LevelStats/HBoxContainer/TimeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Clock" parent="CanvasLayer/LevelStats/HBoxContainer/TimeContainer/HBoxContainer" instance=ExtResource("4_yc3x4")]
layout_mode = 2

[node name="Scenery" type="Node2D" parent="."]

[connection signal="pressed" from="CanvasLayer/LevelStats/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
